<?xml version="1.0" encoding="utf-8"?>
<!-- Filter dropdown of S2 (shown in a PopupWindow, width = @dimen/dropdown_width) -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/category_filter_dropdown"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dropdown"
    android:divider="@drawable/divider_12"
    android:orientation="vertical"
    android:padding="16dp"
    android:showDividers="middle">

    <LinearLayout
        android:id="@+id/category_filter_option_1"
        style="@style/Tips.DropdownOption">

        <TextView
            android:id="@+id/category_filter_option_1_label"
            style="@style/Tips.Text.OptionLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_filter_newest" />

        <ImageView
            android:id="@+id/category_filter_option_1_radio"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_radio" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_filter_option_2"
        style="@style/Tips.DropdownOption">

        <TextView
            android:id="@+id/category_filter_option_2_label"
            style="@style/Tips.Text.OptionLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_filter_popular" />

        <ImageView
            android:id="@+id/category_filter_option_2_radio"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_radio" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_filter_option_3"
        style="@style/Tips.DropdownOption">

        <TextView
            android:id="@+id/category_filter_option_3_label"
            style="@style/Tips.Text.OptionLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_filter_unread" />

        <ImageView
            android:id="@+id/category_filter_option_3_radio"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_radio" />
    </LinearLayout>
</LinearLayout>
